tests/negative/neg_pr116_bad_indent_step.safe
package neg_pr116_bad_indent_step

  function broken returns integer
     return 1
